--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>React Webpack3 Bootstrap Boilerplate</title>
+  <title>React Weather</title>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
 <body>
   <div class="container"></div>
 
